// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CatalogScreen > renders empty state when no products > empty-state 1`] = `
<View
  ref={null}
  testID="empty"
>
  <Text
    ref={null}
  >
    No products found
  </Text>
</View>
`;

exports[`CatalogScreen > renders loading spinner while fetching > loading-state 1`] = `
<View
  ref={null}
  testID="loading"
>
  <Text
    ref={null}
  >
    Loading...
  </Text>
</View>
`;

exports[`CatalogScreen > renders mixed products: available, sold, untagged > mixed-products 1`] = `
<View
  ref={null}
  testID="product-grid"
>
  <View
    ref={null}
    testID="product-prod_1"
  >
    <Text
      ref={null}
    >
      Kurti
    </Text>
    <Text
      ref={null}
    >
      AVAILABLE
    </Text>
  </View>
  <View
    ref={null}
    testID="product-prod_2"
  >
    <Text
      ref={null}
    >
      Saree
    </Text>
    <Text
      ref={null}
    >
      SOLD
    </Text>
  </View>
  <View
    ref={null}
    testID="product-prod_3"
  >
    <Text
      ref={null}
    >
      Lehenga
    </Text>
    <Text
      ref={null}
    >
      RESERVED
    </Text>
  </View>
  <View
    ref={null}
    testID="product-prod_4"
  >
    <Text
      ref={null}
    >
      Ladies Suit
    </Text>
    <Text
      ref={null}
    >
      AVAILABLE
    </Text>
  </View>
</View>
`;

exports[`CatalogScreen > renders product grid with items > product-grid 1`] = `
<View
  ref={null}
  testID="product-grid"
>
  <View
    ref={null}
    testID="product-prod_1"
  >
    <Text
      ref={null}
    >
      Kurti
    </Text>
    <Text
      ref={null}
    >
      AVAILABLE
    </Text>
  </View>
  <View
    ref={null}
    testID="product-prod_2"
  >
    <Text
      ref={null}
    >
      Saree
    </Text>
    <Text
      ref={null}
    >
      SOLD
    </Text>
  </View>
  <View
    ref={null}
    testID="product-prod_3"
  >
    <Text
      ref={null}
    >
      Lehenga
    </Text>
    <Text
      ref={null}
    >
      AVAILABLE
    </Text>
  </View>
</View>
`;
